Stylize Budgie-Remix as budgie-remix
- Choose budgie-remix stylization to ensure consistency in branding
- Remove reddit link in 'Help and Support' slide to reduce clutter
- Correct some formatting

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubiquity-slideshow-ubuntu (108.4) xenial; urgency=medium
+
+  * Change stylization to budgie-remix for consistency in branding
+    - Remove reddit link from gethelp.html slide to reduce clutter
+
+ -- HEXcube <hexcube@HEXlap>  Wed, 23 Mar 2016 14:00:40 +0530
+
 ubiquity-slideshow-ubuntu (108.3) xenial; urgency=medium
 
   [ HEXcube ]
