--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubiquity-slideshow-ubuntu (108.6) xenial; urgency=medium
+
+  * Replace screenshots for media.html, photos.html and software.html slides
+
+ -- HEXcube <hexcubed@gmail.com>  Mon, 28 Mar 2016 00:13:02 +0530
+
 ubiquity-slideshow-ubuntu (108.5) xenial; urgency=medium
 
   * Replace screenshots of Budgie, Firefox and LibreOffice
