--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubiquity-slideshow-ubuntu (108.9) xenial; urgency=medium
+
+  * any architecture so can install on 32bit
+
+ -- fossfreedom <foss.freedom@gmail.com>  Mon, 28 Mar 2016 10:39:21 +0100
+
 ubiquity-slideshow-ubuntu (108.8) xenial; urgency=medium
 
   * rebuild with corrected desktop.html
