--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubiquity-slideshow-ubuntu (110.4) xenial; urgency=medium
+
+  * Remove dashboard.html slide coz XfDashboard isn't pre-installed anymore
+  * Prefix numbers to slide files to reflect their order
+
+ -- HEXcube <hexcubed@gmail.com>  Wed, 13 Apr 2016 02:38:22 +0530
+
 ubiquity-slideshow-ubuntu (110.3) xenial; urgency=medium
 
   * Update screenshot to show budgie-remix Final Beta
