--- a/po/budgie-remix/pt_BR.po
+++ b/po/budgie-remix/pt_BR.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: ubiquity-slideshow-ubuntu\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-03-24 23:23+0200\n"
-"PO-Revision-Date: 2013-09-23 23:29+0000\n"
-"Last-Translator: gabriell nascimento <gabriellhrn@gmail.com>\n"
+"PO-Revision-Date: 2016-11-10 12:23-0200\n"
+"Last-Translator: Kemel Zaidan <kemelzaidan@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2016-04-12 16:41+0000\n"
-"X-Generator: Launchpad (build 17990)\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/accessibility.html:2
@@ -48,6 +48,9 @@ msgid ""
 "browse the web. Easy browsing, high performance, advanced security, powerful "
 "personalization and the cutting edge, all that is between your hands."
 msgstr ""
+"Com o Firefox já instalado, Ubuntu Budgie tem tudo que você precisa para "
+"navegar na web. Navegação fácil, desempenho rápido e segurança avançada, "
+"personalização poderosa e tecnologia the ponta, tudo isso nas suas mãos."
 
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/desktop.html:2
@@ -86,6 +89,7 @@ msgstr "Verifique <strong>suas notificações</strong> facilmente"
 #: slideshows/ubuntu-gnome/slides/desktop.html:24
 msgid "Enhance your work flow with <strong>dynamic workspaces</strong>"
 msgstr ""
+"Melhore o seu fluxo de trabalho com <strong>desktops dinâmicos</strong>"
 
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/gethelp.html:2
@@ -95,14 +99,17 @@ msgstr "Ajuda e suporte"
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/gethelp.html:8
 msgid "Thanks for choosing and installing Ubuntu GNOME"
-msgstr ""
+msgstr "Obrigado por escolher e instalar o Ubuntu Budgie "
 
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/gethelp.html:9
+#, fuzzy
 msgid ""
 "Learn more about Ubuntu GNOME in our Wiki Area <a href=\"https://wiki.ubuntu."
 "com/UbuntuGNOME\">tiny.cc/uGWiki</a>."
 msgstr ""
+"Aprenda mais sobre o Ubuntu Budgie em nossa <a href=\"https://wiki.ubuntu.com"
+"\">Wiki</a>."
 
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/gethelp.html:10
@@ -110,6 +117,8 @@ msgid ""
 "For help and support, go to <a href=\"https://wiki.ubuntu.com/UbuntuGNOME/"
 "ContactUs\">tiny.cc/uGContactUs</a>."
 msgstr ""
+"Para ajuda e suporte, go to <a href=\"https://wiki.ubuntu.com/UbuntuGNOME/"
+"ContactUs\">tiny.cc/uGContactUs</a>."
 
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/gethelp.html:11
@@ -159,7 +168,7 @@ msgstr ""
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/office.html:2
 msgid "Your office on your machine"
-msgstr ""
+msgstr "Seu escritório em seu computador"
 
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/office.html:8
@@ -168,6 +177,10 @@ msgid ""
 "more. LibreOffice is a comprehensive, professional-quality productivity "
 "suite shipped by default. Make your day-to-day tasks more easy and fun."
 msgstr ""
+"Crie documentos, planilhas, apresentações, desenhos profissionais e muito "
+"mais. O LibreOffice é uma suíte de produtividade de qualidade profissional e "
+"abrangente instalada por padrão. Torne suas tarefas do dia-a-dia mais fáceis "
+"e divertidas."
 
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/photos.html:2
@@ -182,6 +195,10 @@ msgid ""
 "pictures. And you can share your favorite snaps on all popular photo sites "
 "and social networks."
 msgstr ""
+"Cansado de procurar pela aplicação ideal para organizar as suas fotos? Com o "
+"GNOME Photos, você pode fácil e rapidamente importar, organizar, editar e "
+"visualizar suas fotos. E pode compartilhar seus retratos em todos os sites "
+"mais populares de imagens e redes sociais."
 
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/software.html:2
@@ -191,7 +208,7 @@ msgstr "Encontre mais programas"
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/software.html:8
 msgid "<strong>Say Goodbye to searching the web for a software.</strong>"
-msgstr ""
+msgstr "<strong>Diga adeus para a busca de software na web.</strong>"
 
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/software.html:9
@@ -201,11 +218,16 @@ msgid ""
 "thousands of free and commercial applications. Installing anything is just a "
 "couple of clicks away from you."
 msgstr ""
+"Com o GNOME Software você pode facilmente encontrar e instalar software. "
+"Suas notas e análises são usadas para classificar os programas por "
+"popularidade. Você tem acesso a milhares de aplicativos livres e comerciais. "
+"Instale qualquer coisa com apenas alguns poucos cliques."
 
 #. type: Content of: <div><h1>
 #: slideshows/ubuntu-gnome/slides/welcome.html:2
+#, fuzzy
 msgid "Welcome to Ubuntu GNOME 16.04"
-msgstr ""
+msgstr "Bem vindo ao Ubuntu Budgie Remix"
 
 #. type: Content of: <div><div><div><p>
 #: slideshows/ubuntu-gnome/slides/welcome.html:8
